--- a/index.html
+++ b/index.html
@@ -198,76 +198,7 @@ The procedure is carried out by gluing eyelashes of the same length as your own,
       </div>
     </section>
 	
-	<section class="testimoni" id="testimoni">
-    <div class="container">
-        <div class="row section-title" data-aos="fade-in" data-aos-duration="1000">
-            <h2>Testimoni</h2>
-            <p>Dengarkan apa kata mereka tentang layanan kami</p>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 col-md-12 mb-3" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="500">
-                <div class="card">
-                    <div class="card-body">
-                        <p class="text-testimoni">"Banyak yang salfok sama Nail Art Wedding, pelayanan yang super ramah"</p>
-                        <div class="user d-flex">
-                            <img src="assets/icon-user.svg" alt="">
-                            <div class="nama-pengguna">
-                                <p>Mia Islamiati</p>
-                                <div class="rating d-flex">
-                                    <img src="assets/icon-star.svg" alt="">
-                                    <img src="assets/icon-star.svg" alt="">
-                                    <img src="assets/icon-star.svg" alt="">
-                                    <img src="assets/icon-star.svg" alt="">
-                                    <img src="assets/icon-star.svg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-12 mb-3" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="500">
-                <div class="card">
-                    <div class="card-body">
-                        <p class="text-testimoni">"Hasil eyelash di Nana Eyelash bagus banget, jadi gak mau cari tempat lain"</p>
-                        <div class="user d-flex">
-                            <img src="assets/icon-user.svg" alt="">
-                            <div class="nama-pengguna">
-                                <p>Salwa Nadia</p>
-                                <div class="rating d-flex">
-                                    <img src="assets/icon-star.svg" alt="">
-                                    <img src="assets/icon-star.svg" alt="">
-                                    <img src="assets/icon-star.svg" alt="">
-                                    <img src="assets/icon-star.svg" alt="">
-                                    <img src="assets/icon-star.svg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-12 mb-3" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="500">
-                <div class="card">
-                    <div class="card-body">
-                        <p class="text-testimoni">"Awet banget nail art dan eyelashnya, padahal udah lama banget"</p>
-                        <div class="user d-flex">
-                            <img src="assets/icon-user.svg" alt="">
-                            <div class="nama-pengguna">
-                                <p>Nia Reva</p>
-                                <div class="rating d-flex">
-                                    <img src="assets/icon-star.svg" alt="">
-                                    <img src="assets/icon-star.svg" alt="">
-                                    <img src="assets/icon-star.svg" alt="">
-                                    <img src="assets/icon-star.svg" alt="">
-                                    <img src="assets/icon-star.svg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+	
 	
 	
     <!-- Подвал -->
@@ -383,7 +314,8 @@ The procedure is carried out by gluing eyelashes of the same length as your own,
           </li>
           <li>
             <a class="two-items" href="#"
-              ><img src="icons/Group2.svg" alt=""
+              >
+			  <img src="icons/Group2.svg" alt=""
             /></a>
           </li>
           <li>
