--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
            
             <!-- Значки соц.сетей -->
             <li class="nav-item nav-iten-ikons">
-              <a class="nav-link" aria-current="page" href="#"
+              <a class="nav-link" aria-current="page" href="https://wa.me/6288295232047"
                 ><img src="icons/Group.svg" alt=""
               /></a>
             </li>
             <li class="nav-item nav-iten-ikons">
-              <a class="nav-link" aria-current="page" href="#"
+              <a class="nav-link" aria-current="page" href="https://www.instagram.com/mariamsyasyah_28/"
                 ><img src="icons/Group2.svg" alt=""
               /></a>
             </li>
@@ -299,8 +299,7 @@ The procedure is carried out by gluing eyelashes of the same length as your own,
 		
 		
 		
-		
-		
+	
 		
 		
 		
@@ -308,12 +307,12 @@ The procedure is carried out by gluing eyelashes of the same length as your own,
 		
 		
 			
-            <ul class="box-icons-footer">
+            <ul class="box-icons-footer"> 
           <li>
-            <a href="#"><img src="icons/Group.svg" alt="" /></a>
+            <a href="https://wa.me/6288295232047"><img src="icons/Group.svg" alt="" /></a>
           </li>
           <li>
-            <a class="two-items" href="#"
+            <a class="two-items" href="https://www.instagram.com/mariamsyasyah_28/"
               >
 			  <img src="icons/Group2.svg" alt=""
             /></a>
