--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ The procedure is carried out by gluing eyelashes of the same length as your own,
               type="button"
               class="btn btn-dark button-project button-project_big button-about-me"
             >
-              Write Me <img src="icons/WhatsApp.svg" alt="" />
+              Write Me <a href="https://wa.me/6288295232047"><img src="icons/WhatsApp.svg" alt="" />
             </button>
           </div>
         </div>
