--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ The procedure is carried out by gluing eyelashes of the same length as your own,
           <div class="rectangle-three">
             <div class="rectangle-three__text">
               <p>
-                Hello, my name is Mariamsyasyah, I'm 22 years old. I’ve only recently been working on eyelashes, but I’m already doing pretty well. You can sign up with me through social networks or by clicking on the button below.
+                Hello, I’ve only recently been working on eyelashes, but I’m already doing pretty well. You can sign up with me through social networks or by clicking on the button below.
               </p>
             </div>
             <button
